master
------

* Make autocomplete views require login

Version 0.1.0
-------------

* Initial Version